# pyparsing-rs

./: .gitignore  CLAUDE.md  Cargo.toml  FINAL_RESULTS.md  Makefile  README.md  TEAM_PROGRESS.md  performance_results.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: batch.rs  compiled_grammar.rs  compiler.rs  file_batch.rs  lib.rs  numpy_batch.rs  parallel_batch.rs  ultra_batch.rs
src/core/: exceptions.rs  mod.rs  parser.rs  results.rs
src/elements/: chars.rs  combinators.rs  literals.rs  mod.rs  positional.rs  repetition.rs  structure.rs
tests/: test_arithmetic.py  test_basic.py  test_combinators.py  test_edge_cases.py  test_performance.py
