[package]
name = "pyparsing-rs"
version = "0.1.0"
edition = "2021"
description = "Blazingly fast Rust rewrite of pyparsing"
license = "MIT"
repository = "https://github.com/aibrushcomputer/pyparsing-rs"

[lib]
name = "pyparsing_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
rustc-hash = "2.0"
smallvec = "1.13"
memchr = "2.7"
rayon = "1.8"
memmap2 = "0.9"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
