[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyparsing-rs"
version = "0.2.0"
description = "Blazingly fast Rust rewrite of pyparsing - 50-200x faster"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "aibrush", email = "aibrush@example.com"}
]
keywords = ["parsing", "parser", "grammar", "rust", "fast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/aibrushcomputer/pyparsing-rs"
Repository = "https://github.com/aibrushcomputer/pyparsing-rs"
Issues = "https://github.com/aibrushcomputer/pyparsing-rs/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_basic.py", "test_combinators.py", "test_arithmetic.py", "test_edge_cases.py"]

[tool.maturin]
features = ["pyo3/extension-module"]
